bk_ida/gccida/c2/push_reload
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1333:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a5, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1334:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1335:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1339:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1328:10: error: conflicting types for 'push_reload'
__int64  push_reload( 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.h:337:12: note: previous declaration is here
extern int push_reload PARAMS ((rtx, rtx, rtx *, rtx *, enum reg_class,
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1341:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1343:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1350:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1365:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class valid_class; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1378:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v50; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1379:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1381:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v53; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1382:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1385:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v57; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1386:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v58; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1388:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v60; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1390:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1390:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/reload.c:1391:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // ebp 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_reload/src/obj/reload.o] Error 1
